Fixed homepage z-index, ptag layering  issues

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,64 +1,70 @@
-#design>.portfolioContainer{
-    max-width:85vh;
+#design>.portfolioContainer {
+    max-width: 85vh;
     position: relative;
     top: -5vh;
-    margin-left:auto;
-    margin-right:auto;
-    padding-right: 5vh;
-    padding-top:0;
-}
-
-#media>.portfolioContainer{
-    max-width:115vh;
-    position: relative;
-    top: -5vh;
-    margin-left:auto;
-    margin-right:auto;
-    padding-right: 5vh;
-    padding-top:0;
-}
-
-#mediaCarousel{
     margin-left: auto;
-    margin-right:auto;
+    margin-right: auto;
+    padding-right: 5vh;
+    padding-top: 0;
 }
 
-.carousel-inner>.item{
-    width:auto;
+#media>.portfolioContainer {
+    max-width: 115vh;
+    position: relative;
+    top: -5vh;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 5vh;
+    padding-top: 0;
+}
+
+#mediaCarousel {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.carousel-inner>.item {
+    width: auto;
     text-align: center;
 }
 
-.carousel-inner>.item>a>img{
-    opacity: 0.5;
+.carousel-inner>.item>a>img {
+    opacity: 0.8;
     filter: contrast(0.8);
 }
 
-.carousel-inner>.item>a>video{
+.carousel-inner>.item>a>video {
     opacity: 0.5;
     filter: contrast(0.8);
     height: auto;
-    width:100%;
+    width: 100%;
 }
 
-.carousel-caption{
+.carousel-caption {
     position: absolute;
-    right:2vh;
-    bottom:1vh;
+    right: 2vh;
+    bottom: 1vh;
 }
 
-.carousel-caption>p{
+#design .carousel-caption h5 {
+    color: white;
+    text-shadow: 0 1px 2px rgb(0, 0, 0);
+}
+
+.carousel-caption>p {
     position: relative;
     top: 0;
     padding: 0;
     width: 100%;
-    max-width: 100%;;
+    max-width: 100%;
+    ;
     text-align: right;
     margin: 0;
     font-style: italic;
     font-weight: 100;
 }
 
-.carousel-caption>h5{
+.carousel-caption>h5 {
     top: 0;
     padding: 0;
     width: 100%;
@@ -69,31 +75,31 @@
     font-weight: 500;
 }
 
-.carousel-indicators{
+.carousel-indicators {
     margin-left: 1vw;
     left: 0;
     width: auto;
     bottom: 0;
 }
 
-.carousel-indicators .active{
+.carousel-indicators .active {
     background-color: rgb(230, 87, 87);
 }
 
-@media(max-width:768px){
-    #design>.portfolioContainer{
-        top:0;
+@media(max-width:768px) {
+    #design>.portfolioContainer {
+        top: 0;
     }
 }
 
-@media(max-height:700px){
-    #design>.portfolioContainer{
-        max-width:100%;
+@media(max-height:700px) {
+    #design>.portfolioContainer {
+        max-width: 100%;
     }
 }
 
-@media(max-height:1000px){
-    #design>.portfolioContainer{
-        min-height:0;
+@media(max-height:1000px) {
+    #design>.portfolioContainer {
+        min-height: 0;
     }
 }
